<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/blog_icon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/blog_title"
        style="@style/standard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summer_adventures"
        app:layout_constraintStart_toEndOf="@+id/blog_icon_image"
        app:layout_constraintTop_toTopOf="@+id/blog_icon_image"
        tools:text="Summer Adventures" />

    <TextView
        android:id="@+id/blog_travel_time"
        style="@style/higlight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/_12hr"
        app:layout_constraintStart_toEndOf="@+id/category"
        app:layout_constraintTop_toBottomOf="@+id/blog_title"
        tools:text="12Hr" />

    <TextView
        android:id="@+id/category"
        style="@style/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/blog_icon_image"
        app:layout_constraintTop_toBottomOf="@+id/blog_title" />


    <TextView
        android:id="@+id/blog_main_title"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/my_adventures_travelling_around_iceland_this_summer"
        app:layout_constraintStart_toStartOf="@+id/blog_icon_image"
        app:layout_constraintTop_toBottomOf="@+id/blog_icon_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        style="@style/CardView.Light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blog_main_title"
        tools:ignore="ContentDescription">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/media_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/main_image"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/textView"
                style="@style/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iceland_adventures"
                app:layout_constraintStart_toStartOf="@+id/media_image"
                app:layout_constraintTop_toBottomOf="@+id/media_image" />

            <TextView
                android:id="@+id/textView1"
                style="@style/standard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/driving_at_night_under_the_lighs_of_the_aurora_borealis"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/favorite_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/media_image"
                app:layout_constraintTop_toBottomOf="@+id/media_image" />

            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="@+id/media_image"
                app:layout_constraintTop_toBottomOf="@+id/media_image"
                app:srcCompat="@drawable/ic_baseline_chat_24"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        style="@style/standard_text"
        android:layout_width="0dp"
        android:layout_height="217dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="73dp"
        android:maxLines="50"
        android:padding="8dp"
        android:text="@string/large_text_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
</androidx.constraintlayout.widget.ConstraintLayout>




